k8-manifests/qa/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
  labels:
    app: nodejs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: nodejs-app
          image: gauravbhardwajb96/nodejs-app:d95941cc0b13a35965a0f848d722a15f2698cc03
          ports:
            - containerPort: 5000
